feat: pulse detail graph representation